# blackjax_utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yml
src/blackjax_utils/: __init__.py  mcmc.py
tests/: test_mcmc.py
